[package]
name = "notracking"
version = "0.1.0"
authors = ["Mike Zeller <mike@mikezeller.net>"]
edition = "2018"

[dependencies]
slog = "2.7.0"
slog-term = "2.6.0"
anyhow = "1.0.38"
lazy_static = "1.4.0"
thiserror = "1.0.23"
getopts = "0.2.21"

[dependencies.openssl]
version = "0.10"
features = [ "vendored" ]

[dependencies.reqwest]
version = "0.11.0"
features = [ "blocking" ]
